# SpeechReadingTrainer

./: .gitignore  README.md  requirements.txt
data/: IDEA_1.md  PROMPT_1.md  example1.txt
doc/: CONFIGURE.md  INSTALL.md  TESTING.md  UPLOAD.md
src/: README.md  program_launcher.py  pyproject.toml  toml_gen.py
src/speech_reading_trainer/: about.py  desktop.py  program.py  program_old.py
src/speech_reading_trainer/modules/: configure.py
